tests/architecture/fixtures/invalid/infrastructure-boundaries/browser-storage.ts
export const value = localStorage.getItem("key");
